--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
 flask
 couchdb
 pandas
-jax[cuda12]
+jax[cuda12-local]
 keras
 aiocouch
 numpy
 tensorflow
+
+gymnasium
+flax
+termcolor
+optax
+tensorboardX
+orbax-checkpoint
+tqdm
+tensorflow_probability
+scipy
